--- a/security/roles/security_validation/tasks/main.yml
+++ b/security/roles/security_validation/tasks/main.yml
@@ -37,8 +37,12 @@
   ansible.builtin.include_tasks: fetch_security_inputs.yml
   when: enable_secure_login_node
 
-- name: Fetch LDAP client inputs
+- name: Fetch LDAP server inputs
   ansible.builtin.include_tasks: fetch_ldap_server_input.yml
+  when: authentication_system == 'openldap'
+
+- name: Generate LDAP password hashes
+  ansible.builtin.include_tasks: generate_ldap_password_hashes.yml
   when: authentication_system == 'openldap'
 
 - name: Fetch LDAP client inputs
