--- a/input/security_config.yml
+++ b/input/security_config.yml
@@ -24,6 +24,21 @@
 # For FreeIPA, this must be set to "freeipa", then FreeIPA will be installed
 authentication_system: "openldap"
 
+# This variable is used to accept the domain name the user intends to configure
+# This variable is a mandatory requirement of both FreeIPA and LDAP Client
+# Eg: ipa.test
+# This field is mandatory for both LDAP and FreeIPA Authentication
+# For FreeIPA - the format is omnia.test
+# For LDAP - if dc=omnia,dc=test, Provide omnia.test
+# For LDAP - If dc=dell,dc=omnia,dc=com Provide dell.omnia.com
+domain_name: "omnia.test"
+
+# Boolean indicating whether login node is requires security features or not
+# It can be set to true or false
+# By default it is set to false indicating security features will not be configured
+enable_secure_login_node: false
+
+# ---------------------------FreeIPA---------------------------
 # A Kerberos realm is the domain over which a Kerberos authentication server has the authority to authenticate a user, host or service.
 # A realm name is often, but not always the upper case version of the name of the DNS domain over which it presides
 realm_name: "OMNIA.TEST"
@@ -42,15 +57,7 @@ directory_manager_password: ""
 # The password must not contain -,\, ',"
 kerberos_admin_password: ""
 
-# This variable is used to accept the domain name the user intends to configure
-# This variable is a mandatory requirement of both FreeIPA and LDAP Client
-# Eg: ipa.test
-# This field is mandatory for both LDAP and FreeIPA Authentication
-# For FreeIPA - the format is omnia.test
-# For LDAP - if dc=omnia,dc=test, Provide omnia.test
-# For LDAP - If dc=dell,dc=omnia,dc=com Provide dell.omnia.com
-domain_name: "omnia.test"
-
+# ---------------------------OpenLDAP---------------------------
 # Connection Type can be TLS, SSL
 # If TLS is given, make sure valid server certificate path is provided
 # If SSL is provided, then secure ldap connection occrs on the port 636
@@ -60,14 +67,14 @@ ldap_connection_type: "TLS"
 # Make sure certificate is present in the path provided
 # The certificate should have .pem or .crt extension.
 # The certificate key should have .key extension
-# This variable are optional i.e. if not provided, then default certificate will be created
+# These variable are optional i.e. if not provided, then default certificate will be created
 # The variables accepts values as follows
-# Certificate Authority file path
-CA_Certificate_file: ""
+# Certificate Authority(CA) issued certificate file path
+tls_ca_certificate: ""
 # LDAP Certificate file path
-Certificate_file: ""
+tls_Certificate: ""
 # LDAP Certificate key file path
-Certificate_key_file: ""
+tls_certificate_key: ""
 
 # This variable accepts the user home directory path for ldap configuration
 # If nfs mount is created for user home, make sure you provide the
@@ -77,15 +84,14 @@ user_home_dir: "/home/omnia-share"
 
 # LDAP server is configured using three admin users for configuration, database, and monitor
 # By default the user for configuration and database is admin
+# Monitor admin username is not to be provided as it is default set to "monitor"
+# It is mandatory to provide password for All three admin users for LDAP server setup
 # Update this variable if these users are different from admin
-openldap_config_root_username: "admin"
-openldap_database_root_username: "admin"
-
-# LDAP server is configured using three admin users for configuration, database, and monitor
-# It is mandatory to provide password for All three admin users for LDAP server setup  
-openldap_config_root_password: ""
-openldap_database_root_password: ""
-openldap_monitor_root_password: ""
+openldap_db_username: "admin"
+openldap_db_password: ""
+openldap_config_username: "admin"
+openldap_config_password: ""
+openldap_monitor_password: ""
 
 # LDAP server is configured using organizations
 # These  organizations and its units are necessary for user creation and group mapping 
@@ -94,8 +100,3 @@ openldap_monitor_root_password: ""
 # These value have default values which can be changed as per requirements
 openldap_organization: "omnia"
 openldap_organization_unit: "People"
-
-# Boolean indicating whether login node is requires security features or not
-# It can be set to true or false
-# By default it is set to false indicating security features will not be configured
-enable_secure_login_node: false
