--- a/security/roles/ldap_server/tasks/ldap_prereq_redhat.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq_redhat.yml
@@ -24,9 +24,9 @@
 
 - name: Create default Certificates
   when:
-    - hostvars['127.0.0.1']['CA_Certificate_file'] == ''
-    - hostvars['127.0.0.1']['Certificate_file'] == ''
-    - hostvars['127.0.0.1']['Certificate_key_file'] == ''
+    - hostvars['127.0.0.1']['tls_ca_certificate'] == ''
+    - hostvars['127.0.0.1']['tls_Certificate'] == ''
+    - hostvars['127.0.0.1']['tls_certificate_key'] == ''
   block:
     - name: Set default certificates as true
       ansible.builtin.set_fact:
@@ -63,37 +63,37 @@
         remote_src: false
         mode: "0644"
       with_items:
-        - "{{ hostvars['127.0.0.1']['CA_Certificate_file'] }}"
-        - "{{ hostvars['127.0.0.1']['Certificate_file'] }}"
-        - "{{ hostvars['127.0.0.1']['Certificate_key_file'] }}"
+        - "{{ hostvars['127.0.0.1']['tls_ca_certificate'] }}"
+        - "{{ hostvars['127.0.0.1']['tls_Certificate'] }}"
+        - "{{ hostvars['127.0.0.1']['tls_certificate_key'] }}"
 
     - name: Copy Certificate to contol plane for client setup
       ansible.builtin.copy:
-        src: "{{ hostvars['127.0.0.1']['CA_Certificate_file'] }}"
+        src: "{{ hostvars['127.0.0.1']['tls_ca_certificate'] }}"
         dest: "{{ tls_cert_path }}"
         mode: "{{ openldap_cert_permissions }}"
       delegate_to: localhost
 
     - name: Set  tls certificate path for LTB playbook
       ansible.builtin.set_fact:
-        ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['CA_Certificate_file']
+        ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['tls_ca_certificate']
          | basename }}" # noqa var-naming
-        ldaptoolbox_openldap_olcTLSCertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['Certificate_file']
+        ldaptoolbox_openldap_olcTLSCertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['tls_Certificate']
          | basename }}" # noqa var-naming
-        ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['Certificate_key_file']
+        ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['tls_certificate_key']
          | basename }}" # noqa var-naming
 
 - name: Set variables for LTB config password
   ansible.builtin.set_fact:
-    ldaptoolbox_openldap_config_olcRootPW_hash: "{{ hostvars['127.0.0.1']['openldap_config_root_password_hash'] }}" # noqa var-naming
+    ldaptoolbox_openldap_config_olcRootPW_hash: "{{ hostvars['127.0.0.1']['openldap_config_password_hash'] }}" # noqa var-naming
   no_log: true
 
 - name: Set variables for LTB database password
   ansible.builtin.set_fact:
-    ldaptoolbox_openldap_database_olcRootPW_hash: "{{ hostvars['127.0.0.1']['openldap_database_root_password_hash'] }}" # noqa var-naming
+    ldaptoolbox_openldap_database_olcRootPW_hash: "{{ hostvars['127.0.0.1']['openldap_db_password_hash'] }}" # noqa var-naming
   no_log: true
 
 - name: Set variables for LTB monitor password
   ansible.builtin.set_fact:
-    ldaptoolbox_openldap_monitor_olcRootPW_hash: "{{ hostvars['127.0.0.1']['openldap_monitor_root_password_hash'] }}" # noqa var-naming
+    ldaptoolbox_openldap_monitor_olcRootPW_hash: "{{ hostvars['127.0.0.1']['openldap_monitor_password_hash'] }}" # noqa var-naming
   no_log: true
