--- a/security/roles/security_validation/tasks/fetch_ldap_server_input.yml
+++ b/security/roles/security_validation/tasks/fetch_ldap_server_input.yml
@@ -27,47 +27,47 @@
     msg: "{{ fail_msg_ltb_dir }}"
   when: not dir_status.stat.exists
 
-- name: Assert openldap_config_root_password
+- name: Assert openldap_config_password
   ansible.builtin.assert:
     that:
-      - openldap_config_root_password | length > min_length | int - 1
-      - openldap_config_root_password | length < max_length | int + 1
-      - '"-" not in openldap_config_root_password '
-      - '"\\" not in openldap_config_root_password '
-      - '"\"" not in openldap_config_root_password '
-      - " \"'\" not in openldap_config_root_password "
+      - openldap_config_password | length > min_length | int - 1
+      - openldap_config_password | length < max_length | int + 1
+      - '"-" not in openldap_config_password '
+      - '"\\" not in openldap_config_password '
+      - '"\"" not in openldap_config_password '
+      - " \"'\" not in openldap_config_password "
     success_msg: "{{ success_msg_config_root_password }}"
     fail_msg: "{{ fail_msg_config_root_password }}"
 
-- name: Assert openldap_database_root_password
+- name: Assert openldap_db_password
   ansible.builtin.assert:
     that:
-      - openldap_database_root_password | length > min_length | int - 1
-      - openldap_database_root_password | length < max_length | int + 1
-      - '"-" not in openldap_database_root_password '
-      - '"\\" not in openldap_database_root_password '
-      - '"\"" not in openldap_database_root_password '
-      - " \"'\" not in openldap_database_root_password "
+      - openldap_db_password | length > min_length | int - 1
+      - openldap_db_password | length < max_length | int + 1
+      - '"-" not in openldap_db_password '
+      - '"\\" not in openldap_db_password '
+      - '"\"" not in openldap_db_password '
+      - " \"'\" not in openldap_db_password "
     success_msg: "{{ success_msg_database_root_password }}"
     fail_msg: "{{ fail_msg_database_root_password }}"
 
-- name: Assert openldap_monitor_root_password
+- name: Assert openldap_monitor_password
   ansible.builtin.assert:
     that:
-      - openldap_monitor_root_password | length > min_length | int - 1
-      - openldap_monitor_root_password | length < max_length | int + 1
-      - '"-" not in openldap_monitor_root_password '
-      - '"\\" not in openldap_monitor_root_password '
-      - '"\"" not in openldap_monitor_root_password '
-      - " \"'\" not in openldap_monitor_root_password "
+      - openldap_monitor_password | length > min_length | int - 1
+      - openldap_monitor_password | length < max_length | int + 1
+      - '"-" not in openldap_monitor_password '
+      - '"\\" not in openldap_monitor_password '
+      - '"\"" not in openldap_monitor_password '
+      - " \"'\" not in openldap_monitor_password "
     success_msg: "{{ success_msg_monitor_root_password }}"
     fail_msg: "{{ fail_msg_monitor_root_password }}"
 
 - name: Validate Certificate directory
   when:
-    - CA_Certificate_file != ''
-    - Certificate_file != ''
-    - Certificate_key_file != ''
+    - tls_ca_certificate != ''
+    - tls_Certificate != ''
+    - tls_certificate_key != ''
   block:
     - name: Check certificate files exist
       ansible.builtin.stat:
@@ -75,9 +75,9 @@
       register: file_status
       failed_when: not file_status.stat.exists
       loop:
-        - "{{ CA_Certificate_file }}"
-        - "{{ Certificate_file }}"
-        - "{{ Certificate_key_file }}"
+        - "{{ tls_ca_certificate }}"
+        - "{{ tls_Certificate }}"
+        - "{{ tls_certificate_key }}"
   rescue:
     - name: Certificate path invalid
       ansible.builtin.fail:
