--- a/security/roles/ldap_client/tasks/configure_sssd_conf.yml
+++ b/security/roles/ldap_client/tasks/configure_sssd_conf.yml
@@ -57,14 +57,14 @@
 
     - name: Update bind dn details if it is provided in input file
       when:
-        - hostvars['127.0.0.1']['openldap_database_root_username'] | length > 1
-        - hostvars['127.0.0.1']['openldap_database_root_password'] | length > 1
+        - hostvars['127.0.0.1']['openldap_db_username'] | length > 1
+        - hostvars['127.0.0.1']['openldap_db_password'] | length > 1
       block:
         - name: Update the certificate path
           ansible.builtin.replace:
             path: "{{ sssd_conf_dest }}"
             regexp: "#ldap_default_bind_dn = cn=admin,dc=omnia,dc=test"
-            replace: "ldap_default_bind_dn = cn={{ hostvars['127.0.0.1']['openldap_database_root_username'] }},{{ reqd_domain_name }}"
+            replace: "ldap_default_bind_dn = cn={{ hostvars['127.0.0.1']['openldap_db_username'] }},{{ reqd_domain_name }}"
 
         - name: Update the authtok type
           ansible.builtin.replace:
@@ -76,7 +76,7 @@
           ansible.builtin.replace:
             path: "{{ sssd_conf_dest }}"
             regexp: "#ldap_default_authtok = blank"
-            replace: "ldap_default_authtok = {{ hostvars['127.0.0.1']['openldap_database_root_password'] }}"
+            replace: "ldap_default_authtok = {{ hostvars['127.0.0.1']['openldap_db_password'] }}"
 
 - name: Update sssd.conf file for SSL connection type
   when:
