--- a/security/roles/security_validation/tasks/generate_ldap_password_hashes.yml
+++ b/security/roles/security_validation/tasks/generate_ldap_password_hashes.yml
@@ -14,34 +14,34 @@
 ---
 
 - name: Genarate password hash for OpenLDAP config
-  ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_config_root_password'] }}"
+  ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_config_password'] }}"
   register: password_hash
   no_log: true
   changed_when: false
 
 - name: Set variables for OpenLDAP config password
   ansible.builtin.set_fact:
-    openldap_config_root_password_hash: "{{ password_hash.stdout }}"
+    openldap_config_password_hash: "{{ password_hash.stdout }}"
   no_log: true
 
 - name: Genarate password hashes for OpenLDAP database
-  ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_database_root_password'] }}"
+  ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_db_password'] }}"
   register: password_hash
   no_log: true
   changed_when: false
 
 - name: Set variables for OpenLDAP database password
   ansible.builtin.set_fact:
-    openldap_database_root_password_hash: "{{ password_hash.stdout }}"
+    openldap_db_password_hash: "{{ password_hash.stdout }}"
   no_log: true
 
 - name: Genarate password hashes for OpenLDAP monitor
-  ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_monitor_root_password'] }}"
+  ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_monitor_password'] }}"
   register: password_hash
   no_log: true
   changed_when: false
 
 - name: Set variables for OpenLDAP monitor password
   ansible.builtin.set_fact:
-    openldap_monitor_root_password_hash: "{{ password_hash.stdout }}"
+    openldap_monitor_password_hash: "{{ password_hash.stdout }}"
   no_log: true
