--- a/security/roles/security_validation/tasks/generate_ldap_password_hashes.yml
+++ b/security/roles/security_validation/tasks/generate_ldap_password_hashes.yml
@@ -16,7 +16,7 @@
 - name: Genarate password hash for OpenLDAP config
   ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_config_password'] }}"
   register: password_hash
-  # no_log: true
+  no_log: true
   changed_when: false
 
 - name: Set variables for OpenLDAP config password
