--- a/security/roles/ldap_client/tasks/configure_ldap_client.yml
+++ b/security/roles/ldap_client/tasks/configure_ldap_client.yml
@@ -62,7 +62,7 @@
 
 - name: Copy the certificate to remote node
   ansible.builtin.copy:
-    src: "{{ hostvars[groups['auth_server'][0]]['ldaptoolbox_openldap_olcTLSCACertificateFile'] }}"
+    src: "{{ tls_cert_path }}/{{ hostvars[groups['auth_server'][0]]['ldaptoolbox_openldap_olcTLSCACertificateFile'] | basename }}"
     dest: "{{ tls_cert_path }}"
     mode: "{{ file_mode }}"
-  delegate_to: localhost
+  # delegate_to: localhost
