--- a/security/roles/ldap_server/tasks/ldap_prereq_redhat.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq_redhat.yml
@@ -25,7 +25,7 @@
 - name: Create default Certificates
   when:
     - hostvars['127.0.0.1']['tls_ca_certificate'] == ''
-    - hostvars['127.0.0.1']['tls_Certificate'] == ''
+    - hostvars['127.0.0.1']['tls_certificate'] == ''
     - hostvars['127.0.0.1']['tls_certificate_key'] == ''
   block:
     - name: Set default certificates as true
@@ -63,7 +63,7 @@
         mode: "0644"
       with_items:
         - "{{ hostvars['127.0.0.1']['tls_ca_certificate'] }}"
-        - "{{ hostvars['127.0.0.1']['tls_Certificate'] }}"
+        - "{{ hostvars['127.0.0.1']['tls_certificate'] }}"
         - "{{ hostvars['127.0.0.1']['tls_certificate_key'] }}"
 
     - name: Copy Certificate to contol plane for client setup
@@ -77,7 +77,7 @@
       ansible.builtin.set_fact:
         ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['tls_ca_certificate']
          | basename }}" # noqa var-naming
-        ldaptoolbox_openldap_olcTLSCertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['tls_Certificate']
+        ldaptoolbox_openldap_olcTLSCertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['tls_certificate']
          | basename }}" # noqa var-naming
         ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['tls_certificate_key']
          | basename }}" # noqa var-naming
