--- a/security/roles/security_validation/tasks/fetch_ldap_server_input.yml
+++ b/security/roles/security_validation/tasks/fetch_ldap_server_input.yml
@@ -66,7 +66,7 @@
 - name: Validate Certificate directory
   when:
     - tls_ca_certificate != ''
-    - tls_Certificate != ''
+    - tls_certificate != ''
     - tls_certificate_key != ''
   block:
     - name: Check certificate files exist
@@ -76,7 +76,7 @@
       failed_when: not file_status.stat.exists
       loop:
         - "{{ tls_ca_certificate }}"
-        - "{{ tls_Certificate }}"
+        - "{{ tls_certificate }}"
         - "{{ tls_certificate_key }}"
   rescue:
     - name: Certificate path invalid
