--- a/airgap/roles/rhel/tasks/restructure_rpm_dir.yml
+++ b/airgap/roles/rhel/tasks/restructure_rpm_dir.yml
@@ -15,7 +15,7 @@
 
 # Restructure Appstream and BaseOS folder
 - name: Execute python script
-  ansible.builtin.command: python3.8 "{{ role_path }}/files/restructure_rpms_folder.py" {{ item }}
+  ansible.builtin.command: "{{ python_version }} {{ role_path }}/files/restructure_rpms_folder.py {{ item }}"
   changed_when: false
   with_items:
     - "{{ merged_dir }}/x86_64/AppStream/Packages"
