--- a/airgap/roles/rhel/vars/main.yml
+++ b/airgap/roles/rhel/vars/main.yml
@@ -39,3 +39,5 @@ xcat_root_env: "/opt/xcat"
 xcat_path_env: "/opt/xcat/bin:/opt/xcat/sbin:/opt/xcat/share/xcat/tools"
 xcat_manpath_env: "/opt/xcat/share/man:$MANPATH"
 perl_badlang_env: 0
+
+python_version: python3.9
