--- a/input/security_config.yml
+++ b/input/security_config.yml
@@ -1,4 +1,4 @@
-# Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+# Copyright 2024 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -15,28 +15,23 @@
 
 #***********************************************************************
 # DO NOT REMOVE OR COMMENT OUT ANY LINES IN THIS FILE.                  
-# SIMPLY APPEND THE REQUIRD VALUES AGAINST THE PARAMETER OF YOUR CHOICE.
+# SIMPLY APPEND THE REQUIRED VALUES AGAINST THE PARAMETER OF YOUR CHOICE.
 #***********************************************************************
 
-# Varibale indicating whether FreeIPA or OpenLDAP must be setup
+# Variable indicating whether FreeIPA or OpenLDAP must be setup
 # It can be set to "freeipa" or "openldap"
-# By default it is set to "openldap" indicating LDAP will be installed on all the nodes
+# By default it is set to "openldap" indicating OpenLDAP will be installed on all the nodes
 # For FreeIPA, this must be set to "freeipa", then FreeIPA will be installed
 authentication_system: "openldap"
 
 # This variable is used to accept the domain name the user intends to configure
-# This variable is a mandatory requirement of both FreeIPA and LDAP Client
+# This variable is a mandatory requirement of both FreeIPA and OpenLDAP Client
 # Eg: ipa.test
-# This field is mandatory for both LDAP and FreeIPA Authentication
+# This field is mandatory for both OpenLDAP and FreeIPA Authentication
 # For FreeIPA - the format is omnia.test
-# For LDAP - if dc=omnia,dc=test, Provide omnia.test
-# For LDAP - If dc=dell,dc=omnia,dc=com Provide dell.omnia.com
+# For OpenLDAP - if dc=omnia,dc=test, Provide omnia.test
+# For OpenLDAP - If dc=dell,dc=omnia,dc=com Provide dell.omnia.com
 domain_name: "omnia.test"
-
-# Boolean indicating whether login node is requires security features or not
-# It can be set to true or false
-# By default it is set to false indicating security features will not be configured
-enable_secure_login_node: false
 
 # ---------------------------FreeIPA---------------------------
 # A Kerberos realm is the domain over which a Kerberos authentication server has the authority to authenticate a user, host or service.
@@ -59,44 +54,54 @@ kerberos_admin_password: ""
 
 # ---------------------------OpenLDAP---------------------------
 # Connection Type can be TLS, SSL
-# If TLS is given, make sure valid server certificate path is provided
-# If SSL is provided, then secure ldap connection occrs on the port 636
+# If TLS is given, valid server certificates are mandatory
+# If SSL is provided, then secure OpenLDAP connection occurs on the port 636
 ldap_connection_type: "TLS"
 
 # These variables accept Certificate file Paths
 # Make sure certificate is present in the path provided
 # The certificate should have .pem or .crt extension.
 # The certificate key should have .key extension
-# These variable are optional i.e. if not provided, then default certificate will be created
+# These variable are optional i.e. if not provided, self signed certificates will be created
 # The variables accepts values as follows
 # Certificate Authority(CA) issued certificate file path
 tls_ca_certificate: ""
-# LDAP Certificate file path
+# OpenLDAP Certificate file path
 tls_certificate: ""
-# LDAP Certificate key file path
+# OpenLDAP Certificate key file path
 tls_certificate_key: ""
 
-# This variable accepts the user home directory path for ldap configuration
-# If nfs mount is created for user home, make sure you provide the
-# LDAP users mount home directory path
-# Default value is /home/omnia-share
-user_home_dir: "/home/omnia-share"
+# This variable accepts the user home directory path for OpenLDAP configuration
+# The home directory should be same as the one configured in external (Enterprise) OpenLDAP server
+# Home directory should be mounted on all the nodes
+# OpenLDAP users mount home directory path
+# Default value is /home
+user_home_dir: "/home"
 
-# LDAP server is configured using three admin users for configuration, database, and monitor
+# OpenLDAP server is configured using three admin users for configuration, database, and monitor
 # By default the user for configuration and database is admin
-# Monitor admin username is not to be provided as it is default set to "monitor"
-# It is mandatory to provide password for All three admin users for LDAP server setup
+# Monitor admin username is not to be provided as it is by default set to "monitor"
+# It is mandatory to provide password for the admin users
 # Update this variable if these users are different from admin
+# The password must be at least 8 characters long
+# The password must not contain -,\, ',"
 openldap_db_username: "admin"
 openldap_db_password: ""
 openldap_config_username: "admin"
 openldap_config_password: ""
 openldap_monitor_password: ""
 
-# LDAP server is configured using organizations
-# These  organizations and its units are necessary for user creation and group mapping 
-# Eg. openldap_organization: "omnia", openldap_organization_unit: "People"
-# Here user belong to Omnia organizarion and is part of People unit
-# These value have default values which can be changed as per requirements
+# OpenLDAP server is configured using organizations
+# These organizations and its units are necessary for user creation and group mapping 
+# Eg. openldap_organization: "omnia", openldap_organizational_unit: "People"
+# Here user belongs to Omnia organization and is part of People unit
+# The default values are openldap_organization: "omnia", openldap_organizational_unit: "People"
+# Variables can be updated based om user requirements
 openldap_organization: "omnia"
-openldap_organization_unit: "People"
+openldap_organizational_unit: "People"
+
+# ---------------------------Secure Login Node---------------------------
+# Boolean indicating whether security features are to be enabled on the login node or not
+# It can be set to true or false
+# By default it is set to false indicating security features will not be configured
+enable_secure_login_node: false
