--- a/security/roles/ldap_server/tasks/ldap_prereq_ubuntu.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq_ubuntu.yml
@@ -1,4 +1,4 @@
-# Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
+# Copyright 2024 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -35,9 +35,9 @@
     - name: Generate TLS certificates
       ansible.builtin.apt:
         pkg:
-          - ssl-cert
+          - "{{ ubuntu_cert_pkg }}"
 
-    - name: Copy Certificate to contol plane for client setup
+    - name: Copy Certificate to control plane for client setup
       ansible.builtin.fetch:
         src: "{{ tls_certificates_directory_path }}/certs/{{ deb_ca_cert_file }}"
         dest: "{{ tls_cert_path }}"
@@ -58,13 +58,13 @@
         src: "{{ item.file }}"
         dest: "{{ tls_certificates_directory_path }}/item.directory"
         remote_src: false
-        mode: "0644"
+        mode: "{{ openldap_cert_permissions }}"
       with_items:
         - { file: "{{ hostvars['127.0.0.1']['tls_ca_certificate'] }}", directory: certs }
         - { file: "{{ hostvars['127.0.0.1']['tls_certificate'] }}", directory: certs }
         - { file: "{{ hostvars['127.0.0.1']['tls_certificate_key'] }}", directory: private }
 
-    - name: Copy Certificate to contol plane for client setup
+    - name: Copy Certificate to control plane for client setup
       ansible.builtin.copy:
         src: "{{ hostvars['127.0.0.1']['tls_ca_certificate'] }}"
         dest: "{{ tls_cert_path }}"
