--- a/security/roles/ldap_server/vars/main.yml
+++ b/security/roles/ldap_server/vars/main.yml
@@ -1,4 +1,4 @@
-# Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
+# Copyright 2024 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -19,13 +19,16 @@ ldaptoolbox_openldap_database_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_
 ldaptoolbox_openldap_monitor_olcRootDN: "cn=monitor" # noqa var-naming
 ldaptoolbox_olcPasswordHash: "{SHA}" # noqa var-naming
 openldap_configuration_mode: "0600"
-openldap_config_permissions: "0777"
+openldap_config_permissions: "0600"
 openldap_cert_permissions: "0644"
 tls_cert_path: "/etc/openldap/certs/"
+tls_cert_source: "/etc/pki/tls/certs"
 rhel_cert_file: "ldapserver.crt"
 rhel_cert_key: "ldapserver.key"
+ssl_limit: 365
 
 # Usage: ldap_prereq_Ubuntu.yml
+ubuntu_cert_pkg: "ssl-cert"
 deb_ca_cert_file: "ca-certificates.crt"
 deb_cert_file: "ssl-cert-snakeoil.pem"
 deb_cert_key: "ssl-cert-snakeoil.key"
@@ -35,3 +38,4 @@ openldap_config_dest_dir: "/opt/ldap"
 openldap_config_src_path: "{{ role_path }}/templates/add_domain.ldif"
 ldap_host_string: "ldapi://%2Fvar%2Frun%2Fslapd%2Fldapi"
 schema_search_string: "Omnia_set_organization"
+env_var_path: "/root/.bashrc"
