--- a/security/roles/security_validation/vars/main.yml
+++ b/security/roles/security_validation/vars/main.yml
@@ -1,4 +1,4 @@
-# Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+# Copyright 2024 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -25,7 +25,7 @@ security_config_syntax_fail_msg: "Failed. Syntax errors present in security_conf
 
 # Usage: fetch_inputs.yml
 authentication_system_success_msg: "authentication_system variable successfully validated"
-authentication_system_fail_msg: "Failed. authentication_system should be either openldap or freeipa"
+authentication_system_fail_msg: "Failed. authentication_system variable in security_config.yml should be either openldap or freeipa"
 min_length: 8
 max_length: 30
 domain_name_length: '63'
@@ -37,7 +37,7 @@ success_msg_directory_manager_password: "directory_manager_password successfully
 fail_msg_directory_manager_password: "Failed. Incorrect format provided for directory_manager_password"
 success_msg_kerberos_admin_password: "kerberos_admin_password successfully validated"
 fail_msg_kerberos_admin_password: "Failed. Incorrect format provided for kerberos_admin_password"
-input_config_failure_msg: "Failed. Since, authentication_system is freeipa,please provide few additional parameters in input/security_config.yml."
+input_config_failure_msg: "Failed. Since, authentication_system is freeipa, provide few additional parameters in input/security_config.yml."
 secure_login_node_success_msg: "enable_secure_login_node successfully validated"
 secure_login_node_fail_msg: "Failed. enable_secure_login_node should be either true or false"
 secure_login_node_warning_msg: "[WARNING] enable_secure_login_node is true in security_config.yml and
@@ -88,16 +88,17 @@ login_node_warning_msg: "[WARNING] login group with ip for login node not presen
 Proceeding execution with manager and compute nodes"
 
 # Usasge: fetch_ldap_server_inputs.yml
-success_msg_config_root_password: "Config password valid"
-fail_msg_config_root_password: Config password invalid"
-success_msg_database_root_password: "Database password valid"
-fail_msg_database_root_password: "Database password invalid"
-success_msg_monitor_root_password: "Monitor password valid"
-fail_msg_monitor_root_password: "Monitor password invalid"
+success_msg_config_root_password: "Openldap Config password valid"
+fail_msg_config_root_password: "Failed, Incorrect format provided for Openldap Config password in input/security_config.yml for openldap configuration."
+success_msg_database_root_password: "Openldap Database password valid"
+fail_msg_database_root_password: "Failed, Incorrect format provided for Openldap Database password in input/security_config.yml for openldap configuration."
+success_msg_monitor_root_password: "Openldap Monitor password valid"
+fail_msg_monitor_root_password: "Failed, Incorrect format provided for Openldap Monitor password in input/security_config.yml for openldap configuration."
 ldap_cert_path_fail_msg: "Failed, LDAP certificate path doesn't exist."
 ldap_cert_path_success_msg: "LDAP certificate path validated"
 fail_msg_ltb_dir: "Failed, LTB directory doesn't exist."
+ltb_git_repo_path: "/opt/omnia/ldap/ansible-role-ldaptoolbox-openldap"
 
-# Usgae: generate_ldap_password_hashes.yml
+# Usage: generate_ldap_password_hashes.yml
 hashing_python_file: "{{ role_path }}/files/generate_hash.py"
 python_version: python3.9
