--- a/security/roles/ldap_client/tasks/configure_authselect_ubuntu.yml
+++ b/security/roles/ldap_client/tasks/configure_authselect_ubuntu.yml
@@ -13,12 +13,6 @@
 #  limitations under the License.
 ---
 
-# Common vars
-sssd_conf_dest: "/etc/sssd/sssd.conf"
-file_permission: "0600"
-sasl_nocanon_regxp: "SASL_NOCANON\ton"
-sasl_nacanon_replace1: "SASL_NOCANON\ton\nBASE\t{{ reqd_domain_name }}"
-sasl_nacanon_replace2: "SASL_NOCANON\ton\nURI\tldap://{{ hostvars[groups['auth_server'][0]]['ansible_env'].SSH_CONNECTION.split(' ')[2] }}"
-# sasl_nacanon_replace3: Defined in each compute os vars file
-sasl_nacanon_replace4: "SASL_NOCANON\ton\nURI\tldap://{{ hostvars[groups['auth_server'][0]]['ansible_env'].SSH_CONNECTION.split(' ')[2] }}:636"
-file_mode: "0644"
+- name: Configure pam-auth with sssd
+  ansible.builtin.command: pam-auth-update --enable mkhomedir
+  changed_when: false
