--- a/security/roles/ldap_server/vars/redhat.yml
+++ b/security/roles/ldap_server/vars/redhat.yml
@@ -13,11 +13,8 @@
 # limitations under the License.
 ---
 
-- name: Include vars for {{ ansible_distribution | lower }}
-  ansible.builtin.include_vars: "{{ role_path }}/vars/{{ ansible_distribution | lower }}.yml"
-
-- name: Prepare OpenLDAP certificates
-  ansible.builtin.include_tasks: ldap_prereq_{{ ansible_distribution | lower }}.yml
-
-- name: Prepare OpenLDAP variables
-  ansible.builtin.include_tasks: ldap_common.yml
+tls_cert_path: "/etc/openldap/certs/"
+tls_cert_source: "/etc/pki/tls/certs"
+rhel_cert_file: "ldapserver.crt"
+rhel_cert_key: "ldapserver.key"
+ssl_limit: 365
